--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.14",
     "xss-clean": "^0.1.1"
   },
