--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "eslint": "^8.2.0",
+    "exceljs": "^4.3.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
