--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/SSA
+MONGO_URI=mongodb+srv://ssa:AuVQ6LTO6tRB2OOC@ssa.fj1ie.mongodb.net/SSA?retryWrites=true&w=majority
 
 NODE_ENV=development
 PORT=3300
