--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "^5.2.0",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^5.3.0",
     "@vercel/edge-config": "^0.2.1",
     "autoprefixer": "10.4.15",
+    "date-fns": "^2.30.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
@@ -27,12 +28,13 @@
     "react-confirm-alert": "^3.0.6",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "uploadthing": "^5.3.3"
   },
   "devDependencies": {
     "daisyui": "^3.5.1",
-    "prisma": "^5.1.1"
+    "prisma": "^5.2.0"
   }
 }
