--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
-    "uploadthing": "^5.3.3"
+    "uploadthing": "^5.3.3",
+    "vercel": "^32.0.1"
   },
   "devDependencies": {
     "daisyui": "^3.5.1",
